gcc/testsuite/rust/rustc/ui/issues/issue-3096-2.rs
enum Bottom { }

fn main() {
    let x = &() as *const () as *const Bottom;
    match x { } // { dg-error ".E0004." "" { target *-*-* } }
}

